examples/test/testpolicy15096.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15096
  namespace: namespace353
spec:
  podSelector:
    matchLabels:
      key20: value25
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key0: value24
          key20: value12
          key26: value47
      podSelector:
        matchLabels:
          key47: value1
          key49: value33
          key34: value17
